[projects-site] - removed unused service from home - added "under construction" banners to contact and team pages - adjusted some file namings

--- a/public/projectFiles/Miko_Player_Character/projectInfo.json
+++ b/public/projectFiles/Miko_Player_Character/projectInfo.json
@@ -18,7 +18,7 @@
   "mainImageName": "player_idle_weapon_visualisation_6_background.png",
   "summaryImagesNames": [
     "player_scaled_x8.png",
-    "Final.gif",
+    "final.gif",
     "player_idle_weapon_visualisation_6_background.png"
   ]
 }
