--- a/angular.json
+++ b/angular.json
@@ -33,7 +33,8 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/robots.txt"
             ],
             "styles": [
               "@angular/material/prebuilt-themes/cyan-orange.css",
