--- a/angular.json
+++ b/angular.json
@@ -99,6 +99,9 @@
               "src/styles.scss"
             ]
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
