--- a/public/projectFiles/Invasion_of_Space/projectInfo.json
+++ b/public/projectFiles/Invasion_of_Space/projectInfo.json
@@ -3,7 +3,7 @@
   "projectType": 1,
   "index": 2,
   "oneLine": "Invades your Phone",
-  "summary": "",
+  "summary": "A phone game, inspired by the arcade classic “Space Invaders”, made in Unity for a school assignment.\n\nThis project was focused on UI design and optimizing the user experience for smartphones. To accomplish the second part, tilt controls were used to steer the player’s ship, and vibrations are triggered for some events that occurred during the gameplay.\n\nThe game also includes multiple save-states, that record the player's high score.",
   "projectStatus": "Completed",
   "completionDateString": "19.03.2021",
   "youtubeLink": "https://youtu.be/K0jshLb3eRk",
@@ -18,6 +18,7 @@
     "Using Save Files to save high scores",
     "Simple particle effects with the built in particle system"
   ],
+  "documentationName": "documentation_invasion_of_space.md",
   "coverImageName": "invasion_of_space_stars.png",
   "mainImageName": "invasion_of_space_gameplay.png",
   "summaryImagesNames": [
