- changed wording on home page to resemble current standpoint better - changed coverImage for Cheese Trails project - adjusted font usage to only have accented font when needed - added reference to base template in robots.txt - added fab to website info on home page

--- a/public/projectFiles/Cheese_Trails/projectInfo.json
+++ b/public/projectFiles/Cheese_Trails/projectInfo.json
@@ -23,7 +23,7 @@
     "Custom scoring system"
   ],
   "documentationName": "documentation_cheese_trails.md",
-  "coverImageName": "cheese_trails_title.png",
+  "coverImageName": "cheese_trails_background-grass.png",
   "mainImageName": "cheese_trails_gameplay_tutorial.png",
   "summaryImagesNames": [
     "cheese_trails_gameplay_level-selection.png",
